WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191453
MediaPlayerPrivateMediaFoundation.h: warning: 'GetService' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
https://bugs.webkit.org/show_bug.cgi?id=191453
Summary
MediaPlayerPrivateMediaFoundation.h: warning: 'GetService' overrides a member...
Fujii Hironori
Reported
2018-11-08 20:53:01 PST
Clang-cl reports following compilation warnings while building WinCairo port:
> [5097/6223] Building CXX object Source\WebCore\CMakeFiles\WebCore.dir\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp.obj > In file included from ..\..\Source\WebCore\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp:28: > ..\..\Source\WebCore\platform\graphics\win/MediaPlayerPrivateMediaFoundation.h(361,43): warning: 'GetService' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE GetService(REFGUID guidService, REFIID riid, LPVOID *ppvObject); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um/mfidl.h(4891,43): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE GetService( > ^ > In file included from ..\..\Source\WebCore\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp:28: > ..\..\Source\WebCore\platform\graphics\win/MediaPlayerPrivateMediaFoundation.h(364,43): warning: 'ActivateObject' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE ActivateObject(REFIID riid, void **ppv); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um/mfobjects.h(5264,43): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE ActivateObject( > ^ > In file included from ..\..\Source\WebCore\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp:28: > ..\..\Source\WebCore\platform\graphics\win/MediaPlayerPrivateMediaFoundation.h(365,43): warning: 'DetachObject' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE DetachObject(); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um/mfobjects.h(5270,43): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE DetachObject( void) = 0; > ^ > In file included from ..\..\Source\WebCore\platform\graphics\win\MediaPlayerPrivateMediaFoundation.cpp:28: > ..\..\Source\WebCore\platform\graphics\win/MediaPlayerPrivateMediaFoundation.h(366,43): warning: 'ShutdownObject' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] > virtual HRESULT STDMETHODCALLTYPE ShutdownObject(); > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um/mfobjects.h(5268,43): note: overridden virtual function is here > virtual HRESULT STDMETHODCALLTYPE ShutdownObject( void) = 0; > ^
Attachments
Patch
(13.98 KB, patch)
2018-11-08 21:01 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-11-08 21:01:26 PST
Created
attachment 354310
[details]
Patch
Don Olmstead
Comment 2
2018-11-08 21:35:15 PST
LGTM It would probably save you some time to look into running clang tidy now that you have clang cl working. There’s a modernize lint
https://clang.llvm.org/extra/clang-tidy/checks/modernize-use-override.html
and most of the modernize lints have an associated fix.
Per Arne Vollan
Comment 3
2018-11-09 08:26:41 PST
Comment on
attachment 354310
[details]
Patch r=me.
WebKit Commit Bot
Comment 4
2018-11-09 10:19:16 PST
Comment on
attachment 354310
[details]
Patch Clearing flags on attachment: 354310 Committed
r238040
: <
https://trac.webkit.org/changeset/238040
>
WebKit Commit Bot
Comment 5
2018-11-09 10:19:17 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-09 10:20:31 PST
<
rdar://problem/45947797
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug