MediaPlayerPrivateMediaFoundation.h: warning: 'GetService' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] https://bugs.webkit.org/show_bug.cgi?id=191453

Reviewed by Per Arne Vollan.

No new tests because there is no behavior change.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h: Marked with 'override' and removed 'virtual'.


Canonical link: https://commits.webkit.org/206254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238040 268f45cc-cd09-0410-ab3c-d52691b4dbfc